# Signal_brief

./: .env_example  .gitignore  ASSUMPTIONS.md  PITCH_DEFENCE.md  README.md  SignalBrief_Rebuilt_Protocol.md  pyproject.toml  scratch.py  start_backend.bat  start_frontend.bat
backend/: __init__.py  ai_service.py  context_engine.py  controller.py  domain.py  geo_zones.py  main.py  message_queue.py  personalization.py  pref_history.json  prefs.json  rule_engine.py  scenario.py
backend/tests/: test_ai_service.py  test_controller.py  test_rule_engine.py
data/: urgency_dataset.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  DecisionLog.tsx  GeoRouteMap.tsx  HMIDisplay.tsx  PreferencesPanel.tsx  styles.css  types.ts
models/: eval_results.json  urgency_classifier.joblib  urgency_classifier_metrics.json
scripts/: evaluate_model.py  export_onnx.py  train_urgency_model.py
