[project]
name = "signalbrief-poc"
version = "0.1.0"
description = "SignalBrief - real-time notification triage and digest demo"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "pydantic>=2.11.0,<3.0.0",
  "groq>=0.31.0,<1.0.0",
  "uvicorn>=0.35.0,<0.36.0",
  "httpx>=0.28.0,<1.0.0",
]
